# KatEngine_Rpg

./: .gitignore  .gitmodules  CMakeLists.txt
engine/: CMakeLists.txt
engine/src/kat/: engine.cpp  engine.hpp  graphics.cpp  graphics.hpp  os.cpp  os.hpp
engine/src/kat/graphics/: colors.hpp  mesh.cpp  mesh.hpp  render_target.cpp  render_target.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp
engine/src/kat/rpg/: data.hpp
engine/src/kat/util/: bounded_array.hpp  camera.cpp  camera.hpp  clock.hpp  interfaces.hpp  math.hpp  tiled_loader.cpp  tiled_loader.hpp  transform_stack.hpp
game/: CMakeLists.txt
game/src/th/: triggerhappy.cpp  triggerhappy.hpp
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
libs/glad/src/: gl.c
run/shaders/: fragsh.glsl  screen.frag  shader.frag  shader.vert  shader2.frag  shader2.vert
tiledp/: t4-3.tsx
